--- a/app/src/main/res/layout/item_location.xml
+++ b/app/src/main/res/layout/item_location.xml
@@ -11,14 +11,17 @@
         android:id="@+id/linearContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?attr/selectableItemBackground"
         android:orientation="vertical"
         android:padding="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textLabel"
@@ -26,8 +29,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="etiqueta1d:"
-                android:textStyle="bold"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"
+                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/iconMap"
@@ -40,8 +43,8 @@
             android:id="@+id/textObservation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Observación:"
             android:layout_marginTop="8dp"
+            android:text="Observación:"
             android:textColor="@android:color/darker_gray" />
 
     </LinearLayout>
